--- a/donutClicker.css
+++ b/donutClicker.css
@@ -2,23 +2,58 @@
     background-color: antiquewhite;
 }
 
-header{
+/* header {
     background-color: aquamarine;
-   
-}
-#navbar{
+ } */
+
+nav {
     display: flex;
+    flex-direction: row;
+    background-color: blueviolet;
+    position: relative;
+    width: 100%;
     
 }
 
-h1{
+h1 {
     font-family: cursive;
     font-size: 30px;
+    display: flex;
+    justify-content: center;
+}
+.details {
+    background-color: beige;
+    display: none;
+    position: relative;
+    padding: 10px 10px;
+    top: 90%;
+    width: 90%;
+    overflow: hidden;
+}
+.hide {
+    background-color: blue;
+    padding: 10px;
+    width: 20%;
+    border: 2px;
+    border-radius: 3px;
+    text-align: center;
+    position: relative;
+    color: darkgreen;
+    font-family: cursive;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 10px;
 }
 
+ .hide:hover {
+    background-color: rgb(226, 235, 151);
+}
 
-
-
+.cointainer, section {
+    display: grid;
+  grid-row: auto;
+    justify-content: center;
+}
 
 
 
